# reaction-diffusion

./: .gitignore  Makefile  Naamloos.ipynb  README.md  Snakefile  pyproject.toml
.entangled/templates/dark/: theme.css
.entangled/templates/escience/: template.html  theme.css
docs/: index.html
